--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
     "commander": "^4.1.1",
     "fs-extra": "^8.1.0",
     "shelljs": "^0.8.3"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^7.1.0",
+    "sinon": "^9.0.1"
   }
 }
