--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "godot-rust-helper",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "A cli that helps you create and update Rust modules for Godot.",
   "main": "index.js",
   "bin": {
@@ -9,9 +9,17 @@
   "scripts": {
     "test": "mocha"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "godot",
+    "rust",
+    "helper",
+    "module",
+    "modules",
+    "NativeScript",
+    "gdnlib"
+  ],
+  "author": "Robert Corponoi",
+  "license": "MIT",
   "dependencies": {
     "commander": "^4.1.1",
     "fs-extra": "^8.1.0",
@@ -19,7 +27,6 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "^7.1.0",
-    "sinon": "^9.0.1"
+    "mocha": "^7.1.0"
   }
 }
