--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "godot-rust-helper",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A cli that helps you create and update Rust modules for Godot.",
   "main": "index.js",
   "bin": {
@@ -21,12 +21,13 @@
   "author": "Robert Corponoi",
   "license": "MIT",
   "dependencies": {
-    "commander": "^4.1.1",
-    "fs-extra": "^8.1.0",
+    "chokidar": "^3.3.1",
+    "commander": "^5.0.0",
+    "fs-extra": "^9.0.0",
     "shelljs": "^0.8.3"
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "^7.1.0"
+    "mocha": "^7.1.1"
   }
 }
