--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "godot-rust-helper",
-  "version": "0.1.1",
+  "version": "1.0.0",
   "description": "A cli that helps you create and update Rust modules for Godot.",
   "main": "index.js",
   "bin": {
@@ -21,6 +21,7 @@
   "author": "Robert Corponoi",
   "license": "MIT",
   "dependencies": {
+    "chalk": "^3.0.0",
     "chokidar": "^3.3.1",
     "commander": "^5.0.0",
     "fs-extra": "^9.0.0",
