--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "godot-rust-helper",
-  "version": "1.1.0",
-  "description": "A cli that helps you create and update Rust modules for Godot.",
+  "version": "2.0.0",
+  "description": "A simple CLI tool to help you create and update Rust modules for your Godot projects.",
   "main": "index.js",
   "bin": {
     "godot-rust-helper": "bin/godot-rust-helper.js"
@@ -21,7 +21,7 @@
   "author": "Robert Corponoi",
   "license": "MIT",
   "dependencies": {
-    "chalk": "^3.0.0",
+    "chalk": "^4.0.0",
     "chokidar": "^3.3.1",
     "commander": "^5.0.0",
     "fs-extra": "^9.0.0",
